Code quality: Format all scripts and fix critical parsing error (#39)
Co-authored-by: Claude <noreply@anthropic.com>